--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "listing-app",
   "version": "1.0.0",
+  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "build": "node app.js",
+    "build": "node app.js"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "axios": "^1.7.9",
     "connect-flash": "^0.1.1",
@@ -21,7 +21,6 @@
     "method-override": "^3.0.0",
     "mongoose": "^8.9.2",
     "passport": "^0.7.0",
-    "passport-local-mongoose": "^8.0.0",
-    "path": "^0.12.7"
+    "passport-local-mongoose": "^8.0.0"
   }
 }
